effect: Fix EffectWindow::contentsRect()

It should specify the client rect inside the frame.

2556378dfa866f99561d09dcd7ac113804972567 incorrectly assumed that the
buffer geometry includes the decoration.

BUG: 482294