src/effect/effectwindow.cpp
@@ -326,7 +326,7 @@ QString EffectWindow::windowClass() const
 
 QRectF EffectWindow::contentsRect() const
 {
-    return d->m_window->clientGeometry().translated(-d->m_window->bufferGeometry().topLeft());
+    return d->m_window->clientGeometry().translated(-d->m_window->frameGeometry().topLeft());
 }
 
 WindowType EffectWindow::windowType() const
